# ProtoN

./: .gitmodules  CMakeLists.txt
apps/: CMakeLists.txt
apps/acoustic_waves/common/: CMakeLists.txt  dirk_hho_scheme.hpp  erk_hho_scheme.hpp  linear_solver.hpp  postprocessor.hpp
apps/acoustic_waves/fitted_acoustic_waves/: CMakeLists.txt
apps/acoustic_waves/unfitted_acoustic_waves/: CMakeLists.txt  unfitted_acoustic_waves.cpp
apps/convergence_test/: convergence_test.cpp
apps/cuthho/: CMakeLists.txt
apps/cuthho_meth2/: cuthho_meth2_square.cpp
apps/cuthho_stokes/: cuthho_stokes.cpp
apps/fitted_acoustic_waves/: CMakeLists.txt  TAnalyticalFunction.cpp  TAnalyticalFunction.hpp  fitted_acoustic_waves.cpp  simple_case.lua
apps/fitted_acoustic_waves/common/: CMakeLists.txt  postprocessor.hpp
apps/fitted_acoustic_waves/fitted_acoustic_waves/: fitted_acoustic_waves.cpp
apps/fitted_acoustic_waves/unfitted_acoustic_waves/: unfitted_acoustic_waves.cpp
apps/interface/: interface.cpp
apps/interface_stokes_test_cases/: CMakeLists.txt  interface_stokes_test_cases.cpp
apps/polymesh/: CMakeLists.txt  polymesh.cpp
apps/polynomial_extension/common/: linear_solver.hpp  postprocessor.hpp
apps/polynomial_extension/fitted/: CMakeLists.txt
apps/polynomial_extension/unfitted/: CMakeLists.txt  unfitted_elasto_acoustic_waves.cpp
apps/polynomial_extension/unfitted/Classes/: cut_interface_method.hpp  gradrec_interface_method.hpp  interface_method.hpp  mixed_interface_method.hpp
apps/polynomial_extension/unfitted/Elliptic/: CMakeLists.txt  Elliptic_Interface_Agglo.cpp  Elliptic_Interface_Poly_Ext.cpp
apps/polynomial_extension/unfitted/Elliptic/Agglomeration/: cut_methods.hpp  cutmesh.hpp  methods copy.hpp  methods.hpp  postpro.hpp  uncut_methods.hpp
apps/polynomial_extension/unfitted/Elliptic/Common/: test_cases.hpp
apps/polynomial_extension/unfitted/Elliptic/Mesh_Preprocessors/: CutMesh.hpp
apps/polynomial_extension/unfitted/Elliptic/Polynomial_extension/: cut_methods.hpp  cutmesh.hpp  methods.hpp  uncut_methods.hpp
apps/polynomial_extension/unfitted/Matrix_Assemblers/: create_kg_and_mg_cuthho_interface.hpp
apps/polynomial_extension/unfitted/Prototypes/: CutHHOSecondOrderConvTest.hpp
apps/stokesInterfaceProblem/: CMakeLists.txt  stokesInterfaceProblem.cpp
apps/taylor_green_vortex/: taylor_green_vortex.cpp
cmake/: FindMKL.cmake  FindTBB.cmake
src/core/: core
src/core/core_bits/: bases.hpp  basic_geom.hpp  basic_mesh.hpp  level_set.hpp  level_set_transport_problem.hpp  point.hpp  post_processing.hpp  random_functions.hpp  stokes_info.hpp  test_cases.hpp  utils.hpp
src/methods/cuthho_bits/: cuthho_agglomeration.hpp  cuthho_assemblers.hpp  cuthho_export.hpp  cuthho_geom.hpp  cuthho_mesh.hpp  cuthho_utils.hpp
src/methods/hho_bits/: hho.hpp
